<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_carrera"
            android:icon="@drawable/icons8_running_50"
            android:title="@string/Correr"/>
        <item
            android:id="@+id/nav_ciclismo"
            android:icon="@drawable/icons8_cycling_50"
            android:title="@string/Ciclismo" />
        <item
            android:id="@+id/nav_natacion"
            android:icon="@drawable/icons8_swimming_50"
            android:title="@string/Natacion" />
        <item
            android:id="@+id/nav_pesas"
            android:icon="@drawable/icons8_weightlifting_50"
            android:title="@string/Pesas" />
        <item
            android:id="@+id/nav_fuerza"
            android:icon="@drawable/icons8_pushups_50"
            android:title="@string/Fuerza" />
        <item
            android:id="@+id/nav_mas"
            android:icon="@drawable/icons8_plus_50"
            android:title="@string/Mas" />
    </group>

    <item
        android:id="@+id/registro"
        android:icon="@drawable/icons8_time_machine_50"
        android:title="@string/Registro" />

    <item
        android:id="@+id/grafica"
        android:icon="@drawable/icons8_running_50"
        android:title="@string/Grafica" />

 <!--   <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
